#10526 nav hero overlap issue

--- a/public/less/ssb-site-builder/ssb-sections/ssb-nav-hero.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-nav-hero.less
@@ -175,13 +175,18 @@
             });
         }
         .ssb-media-query-small-only({
-            .navigation-v2 .navbar .navbar-header{
-                float: none;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                .navbar-toggle{
-                    margin-top: 0px;
+            .navigation-v2 .navbar {
+                 .navbar-brand {
+                    width: 60%!important;
+                } 
+                .navbar-header{
+                    float: none;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    .navbar-toggle{
+                        margin-top: 0px;
+                    }
                 }
             }
         });
